[gd_scene load_steps=14 format=4 uid="uid://ct86hwv78w8no"]

[ext_resource type="Texture2D" uid="uid://1genmavw1uq5" path="res://assets/spritesheet.png" id="1_7laxm"]
[ext_resource type="Script" path="res://Scripts/level_control_maze.gd" id="1_kmncd"]
[ext_resource type="PackedScene" uid="uid://cgepxif35j5tm" path="res://player_1.tscn" id="2_xpixk"]
[ext_resource type="PackedScene" uid="uid://ry8qs3cvsjbw" path="res://player_2.tscn" id="3_7wvnb"]
[ext_resource type="PackedScene" uid="uid://dudrxfyyay7ob" path="res://scene_fade.tscn" id="4_ns3we"]
[ext_resource type="Texture2D" uid="uid://kkdkxrbgrh2j" path="res://assets/maze_1.svg" id="6_qpq00"]
[ext_resource type="PackedScene" uid="uid://eypumpj43luq" path="res://white_coin.tscn" id="7_f3dax"]
[ext_resource type="PackedScene" uid="uid://dhd3b7r220nra" path="res://black_coin.tscn" id="8_savqc"]

[sub_resource type="Animation" id="Animation_rmypb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.88, 0.805)]
}

[sub_resource type="Animation" id="Animation_3ce2h"]
resource_name = "camera_zoom"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.466667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.88, 0.88), Vector2(1.13, 1.13)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ydgay"]
_data = {
"RESET": SubResource("Animation_rmypb"),
"camera_zoom": SubResource("Animation_3ce2h")
}

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_eo3mv"]
texture = ExtResource("1_7laxm")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
0:4/0 = 0
1:4/0 = 0
0:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0

[sub_resource type="TileSet" id="TileSet_5cu6u"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
sources/1 = SubResource("TileSetAtlasSource_eo3mv")

[node name="Root" type="Node2D"]
script = ExtResource("1_kmncd")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ydgay")
}

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1344.0
offset_top = -640.0
offset_right = 192.0
offset_bottom = 192.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.78345, 1.62644)
color = Color(0, 0, 0, 1)

[node name="Base" type="TileMapLayer" parent="."]
texture_filter = 1
tile_map_data = PackedByteArray("AADo/+3/AQAJAAAAAADo/+7/AQAJAAAAAADo/+//AQAJAAAAAADo//D/AQAJAAAAAADo//H/AQAJAAAAAADo//L/AQAJAAAAAADo//P/AQAJAAAAAADp/+3/AQAJAAAAAADq/+3/AQAJAAAAAADr/+3/AQAJAAAAAADs/+3/AQAJAAAAAADt/+3/AQAJAAAAAADu/+3/AQAJAAAAAADv/+3/AQAJAAAAAADw/+3/AQAJAAAAAADx/+3/AQAJAAAAAADu/+7/AQAJAAAAAADu/+//AQAJAAAAAADs/+//AQAJAAAAAADs//D/AQAJAAAAAADs//H/AQAJAAAAAADt//H/AQAJAAAAAADu//H/AQAJAAAAAADv//H/AQAJAAAAAADw//H/AQAJAAAAAADx//H/AQAJAAAAAADy//H/AQAJAAAAAADz//H/AQAJAAAAAAD0//H/AQAJAAAAAAD0//D/AQAJAAAAAAD0/+//AQAJAAAAAADy/+3/AQAJAAAAAADy/+7/AQAJAAAAAADy/+//AQAJAAAAAADw/+//AQAJAAAAAADw//D/AQAJAAAAAADp/+//AQAJAAAAAADq/+//AQAJAAAAAADq//H/AQAJAAAAAADq//L/AQAJAAAAAADq//P/AQAJAAAAAADq//T/AQAJAAAAAADq//X/AQAJAAAAAADq//b/AQAJAAAAAADq//f/AQAJAAAAAADr//f/AQAJAAAAAADs//f/AQAJAAAAAADt//f/AQAJAAAAAADu//f/AQAJAAAAAADu//b/AQAJAAAAAADu//X/AQAJAAAAAADv//X/AQAJAAAAAADw//X/AQAJAAAAAADx//X/AQAJAAAAAADy//X/AQAJAAAAAADz//X/AQAJAAAAAAD0//X/AQAJAAAAAAD1//X/AQAJAAAAAAD2//X/AQAJAAAAAADy//b/AQAJAAAAAADy//f/AQAJAAAAAADw//T/AQAJAAAAAADw//P/AQAJAAAAAADs//T/AQAJAAAAAADs//X/AQAJAAAAAADs//P/AQAJAAAAAADt//P/AQAJAAAAAADu//P/AQAJAAAAAADu//L/AQAJAAAAAADy//P/AQAJAAAAAADy//L/AQAJAAAAAAD0//L/AQAJAAAAAAD0//P/AQAJAAAAAAD0//T/AQAJAAAAAAD2//L/AQAJAAAAAAD2//P/AQAJAAAAAAD2//H/AQAJAAAAAAD2//D/AQAJAAAAAAD2/+//AQAJAAAAAAD3/+//AQAJAAAAAAD4/+//AQAJAAAAAAD5/+//AQAJAAAAAAD6/+//AQAJAAAAAAD6/+7/AQAJAAAAAAD6/+3/AQAJAAAAAADz/+3/AQAJAAAAAAD0/+3/AQAJAAAAAAD1/+3/AQAJAAAAAAD2/+3/AQAJAAAAAAD3/+3/AQAJAAAAAAD4/+3/AQAJAAAAAAD5/+3/AQAJAAAAAAD7/+3/AQAJAAAAAAD8/+3/AQAJAAAAAAD9/+3/AQAJAAAAAAD+/+3/AQAJAAAAAAD//+3/AQAJAAAAAAAAAO3/AQAJAAAAAAABAO3/AQAJAAAAAAACAO3/AQAJAAAAAAADAO3/AQAJAAAAAAAEAO3/AQAJAAAAAAAFAO3/AQAJAAAAAAAGAO3/AQAJAAAAAAAHAO3/AQAJAAAAAAAIAO3/AQAJAAAAAAAJAO3/AQAJAAAAAAAKAO3/AQAJAAAAAAALAO3/AQAJAAAAAAAMAO3/AQAJAAAAAAANAO3/AQAJAAAAAAAOAO3/AQAJAAAAAAAPAO3/AQAJAAAAAAAQAO3/AQAJAAAAAAARAO3/AQAJAAAAAAASAO3/AQAJAAAAAAATAO3/AQAJAAAAAAAUAO3/AQAJAAAAAAAVAO3/AQAJAAAAAAAWAO3/AQAJAAAAAAAXAO3/AQAJAAAAAAAYAO3/AQAJAAAAAAD8/+//AQAJAAAAAAD9/+//AQAJAAAAAAD+/+//AQAJAAAAAAD//+//AQAJAAAAAAABAO//AQAJAAAAAAACAO//AQAJAAAAAAADAO//AQAJAAAAAAAEAO//AQAJAAAAAAAFAO//AQAJAAAAAAAGAO//AQAJAAAAAAAHAO//AQAJAAAAAAAHAO7/AQAJAAAAAAD///D/AQAJAAAAAAD///H/AQAJAAAAAAD///L/AQAJAAAAAAD///P/AQAJAAAAAAD///T/AQAJAAAAAAD///X/AQAJAAAAAAD+//X/AQAJAAAAAAD9//X/AQAJAAAAAAD8//X/AQAJAAAAAAD7//X/AQAJAAAAAAD6//X/AQAJAAAAAAD5//X/AQAJAAAAAAD4//X/AQAJAAAAAAD4//T/AQAJAAAAAAD4//P/AQAJAAAAAAD4//L/AQAJAAAAAAD4//H/AQAJAAAAAAD5//H/AQAJAAAAAAD6//H/AQAJAAAAAAD7//H/AQAJAAAAAAD8//H/AQAJAAAAAAD9//H/AQAJAAAAAAD9//L/AQAJAAAAAAD7//T/AQAJAAAAAAD6//P/AQAJAAAAAAD7//P/AQAJAAAAAAD9//P/AQAJAAAAAAABAPH/AQAJAAAAAAACAPH/AQAJAAAAAAADAPH/AQAJAAAAAAAEAPH/AQAJAAAAAAAFAPH/AQAJAAAAAAAGAPH/AQAJAAAAAAAHAPH/AQAJAAAAAAAIAPH/AQAJAAAAAAAJAPH/AQAJAAAAAAAJAPD/AQAJAAAAAAAJAO//AQAJAAAAAAALAO7/AQAJAAAAAAALAO//AQAJAAAAAAALAPD/AQAJAAAAAAALAPH/AQAJAAAAAAALAPL/AQAJAAAAAAALAPP/AQAJAAAAAAALAPT/AQAJAAAAAAALAPX/AQAJAAAAAAAKAPX/AQAJAAAAAAAJAPX/AQAJAAAAAAAJAPT/AQAJAAAAAAAJAPP/AQAJAAAAAAAJAPL/AQAJAAAAAAAMAPP/AQAJAAAAAAANAPP/AQAJAAAAAAAOAPP/AQAJAAAAAAAPAPP/AQAJAAAAAAAQAPP/AQAJAAAAAAARAPP/AQAJAAAAAAASAPP/AQAJAAAAAAATAPP/AQAJAAAAAAAUAPP/AQAJAAAAAAAVAPP/AQAJAAAAAAAVAPT/AQAJAAAAAAAVAPX/AQAJAAAAAAAUAPX/AQAJAAAAAAATAPX/AQAJAAAAAAASAPX/AQAJAAAAAAARAPX/AQAJAAAAAAANAPL/AQAJAAAAAAANAPH/AQAJAAAAAAANAO//AQAJAAAAAAAOAO//AQAJAAAAAAAPAO//AQAJAAAAAAAQAO//AQAJAAAAAAARAO//AQAJAAAAAAAPAPD/AQAJAAAAAAAPAPH/AQAJAAAAAAAQAPH/AQAJAAAAAAARAPH/AQAJAAAAAAASAPH/AQAJAAAAAAATAPH/AQAJAAAAAAAUAPH/AQAJAAAAAAAVAPH/AQAJAAAAAAAWAPH/AQAJAAAAAAAXAPH/AQAJAAAAAAATAPD/AQAJAAAAAAATAO//AQAJAAAAAAAUAO//AQAJAAAAAAAVAO//AQAJAAAAAAAWAO//AQAJAAAAAAAXAO//AQAJAAAAAAAXAPL/AQAJAAAAAAAXAPP/AQAJAAAAAAAXAPT/AQAJAAAAAAAXAPX/AQAJAAAAAAAXAPb/AQAJAAAAAAAXAPf/AQAJAAAAAAAXAPj/AQAJAAAAAAAXAPn/AQAJAAAAAAAXAPr/AQAJAAAAAAAXAPv/AQAJAAAAAAAYAPv/AQAJAAAAAAAZAPv/AQAJAAAAAAAZAPr/AQAJAAAAAAAZAPn/AQAJAAAAAAAZAPj/AQAJAAAAAAAZAPf/AQAJAAAAAAAZAPb/AQAJAAAAAAAZAPX/AQAJAAAAAAAZAPT/AQAJAAAAAAAZAPP/AQAJAAAAAAAZAPL/AQAJAAAAAAAZAPH/AQAJAAAAAAAZAPD/AQAJAAAAAAAZAO//AQAJAAAAAAAZAO7/AQAJAAAAAAAZAO3/AQAJAAAAAAAZAPz/AQAJAAAAAAAZAP3/AQAJAAAAAAAZAP7/AQAJAAAAAAAZAP//AQAJAAAAAAAZAAAAAQAJAAAAAAAZAAEAAQAKAAAAAAAZAAIAAQAKAAAAAAAZAAMAAQAKAAAAAAAZAAQAAQAKAAAAAAAZAAUAAQAKAAAAAAAZAAYAAQAKAAAAAAAZAAcAAQAKAAAAAAAZAAgAAQAKAAAAAAAZAAkAAQAKAAAAAAAZAAoAAQAKAAAAAAAZAAsAAQAKAAAAAAAZAAwAAQAKAAAAAAAZAA0AAQAKAAAAAAAZAA4AAQAKAAAAAAAZAA8AAQAKAAAAAAAZABAAAQAKAAAAAAAZABEAAQAKAAAAAAAZABIAAQAKAAAAAAAZABMAAQAKAAAAAAAWAPf/AQAJAAAAAAAVAPf/AQAJAAAAAAAUAPf/AQAJAAAAAAATAPf/AQAJAAAAAAASAPf/AQAJAAAAAAARAPf/AQAJAAAAAADw//f/AQAJAAAAAADw//j/AQAJAAAAAADo//T/AQAJAAAAAADo//X/AQAJAAAAAADo//b/AQAJAAAAAADo//f/AQAJAAAAAADo//j/AQAJAAAAAADo//n/AQAJAAAAAADo//r/AQAJAAAAAADo//v/AQAJAAAAAADo//z/AQAJAAAAAADo//3/AQAJAAAAAADo//7/AQAJAAAAAADo////AQAJAAAAAADo/wAAAQAJAAAAAADo/wEAAQAKAAAAAADo/wIAAQAKAAAAAADo/wMAAQAKAAAAAADo/wQAAQAKAAAAAADo/wUAAQAKAAAAAADo/wgAAQAKAAAAAADo/wcAAQAKAAAAAADo/wYAAQAKAAAAAADo/wkAAQAKAAAAAADo/woAAQAKAAAAAADo/wsAAQAKAAAAAADo/wwAAQAKAAAAAADo/w0AAQAKAAAAAADo/w4AAQAKAAAAAADo/w8AAQAKAAAAAADo/xAAAQAKAAAAAADo/xEAAQAKAAAAAADo/xIAAQAKAAAAAADo/xMAAQAKAAAAAADo/xQAAQAKAAAAAADp/xQAAQAKAAAAAADq/xQAAQAKAAAAAADr/xQAAQAKAAAAAADs/xQAAQAKAAAAAADt/xQAAQAKAAAAAADu/xQAAQAKAAAAAADv/xQAAQAKAAAAAADw/xQAAQAKAAAAAADx/xQAAQAKAAAAAADy/xQAAQAKAAAAAADz/xQAAQAKAAAAAAD0/xQAAQAKAAAAAAD1/xQAAQAKAAAAAAD2/xQAAQAKAAAAAAD3/xQAAQAKAAAAAAD4/xQAAQAKAAAAAAD5/xQAAQAKAAAAAAD6/xQAAQAKAAAAAAD7/xQAAQAKAAAAAAD8/xQAAQAKAAAAAAD9/xQAAQAKAAAAAAD+/xQAAQAKAAAAAAD//xQAAQAKAAAAAAAAABQAAQAKAAAAAAABABQAAQAKAAAAAAACABQAAQAKAAAAAAADABQAAQAKAAAAAAAEABQAAQAKAAAAAAAFABQAAQAKAAAAAAAGABQAAQAKAAAAAAAHABQAAQAKAAAAAAAIABQAAQAKAAAAAAAJABQAAQAKAAAAAAAKABQAAQAKAAAAAAALABQAAQAKAAAAAAAMABQAAQAKAAAAAAANABQAAQAKAAAAAAAOABQAAQAKAAAAAAAPABQAAQAKAAAAAAAQABQAAQAKAAAAAAARABQAAQAKAAAAAAASABQAAQAKAAAAAAATABQAAQAKAAAAAAAUABQAAQAKAAAAAAAVABQAAQAKAAAAAAAWABQAAQAKAAAAAAAXABQAAQAKAAAAAAAYABQAAQAKAAAAAAAZABQAAQAKAAAAAADq//j/AQAJAAAAAADq//n/AQAJAAAAAADq//r/AQAJAAAAAADq//v/AQAJAAAAAADq//z/AQAJAAAAAADq//3/AQAJAAAAAADq//7/AQAJAAAAAADp//7/AQAJAAAAAADr//n/AQAJAAAAAADs//n/AQAJAAAAAADs//v/AQAJAAAAAADt//v/AQAJAAAAAADu//n/AQAJAAAAAADu//r/AQAJAAAAAADu//v/AQAJAAAAAADu//z/AQAJAAAAAADu//3/AQAJAAAAAADu//7/AQAJAAAAAADv//n/AQAJAAAAAADw//n/AQAJAAAAAADx//n/AQAJAAAAAADy//n/AQAJAAAAAADz//n/AQAJAAAAAAD0//n/AQAJAAAAAAD0//j/AQAJAAAAAAD0//f/AQAJAAAAAAD1//f/AQAJAAAAAAD2//f/AQAJAAAAAAD3//f/AQAJAAAAAAD4//f/AQAJAAAAAAD4//b/AQAJAAAAAAD4//j/AQAJAAAAAAD4//n/AQAJAAAAAAD4//r/AQAJAAAAAAD4//v/AQAJAAAAAAD4//z/AQAJAAAAAAD4//3/AQAJAAAAAAD4//7/AQAJAAAAAAD4////AQAJAAAAAAD4/wAAAQAJAAAAAAD7//v/AQAJAAAAAAD6//v/AQAJAAAAAAD6//3/AQAJAAAAAAD7//3/AQAJAAAAAAD8//3/AQAJAAAAAAD9//3/AQAJAAAAAAD+//3/AQAJAAAAAAD///3/AQAJAAAAAAAAAP3/AQAJAAAAAAABAP3/AQAJAAAAAAACAP3/AQAJAAAAAAADAPz/AQAJAAAAAAADAPv/AQAJAAAAAAADAPr/AQAJAAAAAAADAPn/AQAJAAAAAAABAPv/AQAJAAAAAAAAAPv/AQAJAAAAAAD///v/AQAJAAAAAAD+//v/AQAJAAAAAAACAPn/AQAJAAAAAAD9//v/AQAJAAAAAAD9//r/AQAJAAAAAAD9//n/AQAJAAAAAAD9//j/AQAJAAAAAAD9//f/AQAJAAAAAAD9//b/AQAJAAAAAAD///r/AQAJAAAAAAD///n/AQAJAAAAAAD///j/AQAJAAAAAAD///f/AQAJAAAAAAABAPn/AQAJAAAAAAABAPj/AQAJAAAAAAABAPf/AQAJAAAAAAABAPb/AQAJAAAAAAABAPX/AQAJAAAAAAABAPT/AQAJAAAAAAABAPP/AQAJAAAAAAABAPL/AQAJAAAAAAACAPf/AQAJAAAAAAADAPf/AQAJAAAAAAADAPX/AQAJAAAAAAADAPT/AQAJAAAAAAADAPP/AQAJAAAAAAAEAPP/AQAJAAAAAAAFAPP/AQAJAAAAAAAGAPP/AQAJAAAAAAAHAPP/AQAJAAAAAAAHAPT/AQAJAAAAAAAHAPX/AQAJAAAAAAAHAPb/AQAJAAAAAAAHAPf/AQAJAAAAAAAIAPf/AQAJAAAAAAAJAPf/AQAJAAAAAAAKAPf/AQAJAAAAAAALAPf/AQAJAAAAAAAMAPf/AQAJAAAAAAANAPf/AQAJAAAAAAANAPb/AQAJAAAAAAANAPX/AQAJAAAAAAAFAPX/AQAJAAAAAAAFAPb/AQAJAAAAAAAFAPf/AQAJAAAAAAAFAPj/AQAJAAAAAAAFAPn/AQAJAAAAAAAGAPn/AQAJAAAAAAAHAPn/AQAJAAAAAAAIAPn/AQAJAAAAAAAJAPn/AQAJAAAAAAAKAPn/AQAJAAAAAAALAPn/AQAJAAAAAAD7//z/AQAJAAAAAAD7//r/AQAJAAAAAAD7//n/AQAJAAAAAAD7//j/AQAJAAAAAAD7//f/AQAJAAAAAAD6//f/AQAJAAAAAAD5//n/AQAJAAAAAAAEAPv/AQAJAAAAAAAFAPv/AQAJAAAAAAAGAPv/AQAJAAAAAAAHAPv/AQAJAAAAAAAIAPv/AQAJAAAAAAAJAPv/AQAJAAAAAAAKAPv/AQAJAAAAAAALAPv/AQAJAAAAAAALAPr/AQAJAAAAAAALAPz/AQAJAAAAAAANAPj/AQAJAAAAAAANAPn/AQAJAAAAAAANAPr/AQAJAAAAAAANAPv/AQAJAAAAAAANAPz/AQAJAAAAAAANAP3/AQAJAAAAAAANAP7/AQAJAAAAAAAPAPb/AQAJAAAAAAAPAPX/AQAJAAAAAAAPAPT/AQAJAAAAAAAPAPf/AQAJAAAAAAARAPr/AQAJAAAAAAAUAPn/AQAJAAAAAAAVAPn/AQAJAAAAAAAVAPr/AQAJAAAAAAAVAPv/AQAJAAAAAAAVAPz/AQAJAAAAAAAVAP3/AQAJAAAAAAAWAP3/AQAJAAAAAAAXAP3/AQAJAAAAAAAYAP//AQAJAAAAAAAXAP//AQAJAAAAAAAXAAAAAQAJAAAAAAAWAAAAAQAJAAAAAAAVAAAAAQAJAAAAAAAYAAIAAQAKAAAAAAAXAAIAAQAKAAAAAAAWAAIAAQAKAAAAAAAVAAIAAQAKAAAAAAAUAAIAAQAKAAAAAAATAAIAAQAKAAAAAAATAAEAAQAKAAAAAAATAAAAAQAJAAAAAAATAP7/AQAJAAAAAAATAP//AQAJAAAAAAAUAP7/AQAJAAAAAAAVAP7/AQAJAAAAAAASAP7/AQAJAAAAAAARAP7/AQAJAAAAAAASAPz/AQAJAAAAAAARAPz/AQAJAAAAAAATAPz/AQAJAAAAAAARAP3/AQAJAAAAAAAQAPr/AQAJAAAAAAAPAP//AQAJAAAAAAAPAPv/AQAJAAAAAAAPAPz/AQAJAAAAAAAPAP3/AQAJAAAAAAAPAP7/AQAJAAAAAAAPAPr/AQAJAAAAAAARAPn/AQAJAAAAAAARAPj/AQAJAAAAAAATAPn/AQAJAAAAAAATAPr/AQAJAAAAAAAPAAAAAQAJAAAAAAAQAAAAAQAJAAAAAAARAAAAAQAJAAAAAAASAAIAAQAKAAAAAAARAAIAAQAKAAAAAAAQAAIAAQAKAAAAAAAPAAIAAQAKAAAAAAAOAAIAAQAKAAAAAAANAAIAAQAKAAAAAAAMAAIAAQAKAAAAAAALAAIAAQAKAAAAAAANAAEAAQAKAAAAAAANAAAAAQAJAAAAAAAMAAAAAQAJAAAAAAALAAAAAQAJAAAAAAAOAP7/AQAJAAAAAAAMAP7/AQAJAAAAAAALAP7/AQAJAAAAAAAKAP7/AQAJAAAAAAAJAAAAAQAJAAAAAAAJAAEAAQAKAAAAAAAJAAIAAQAKAAAAAAAJAAMAAQAKAAAAAAAJAAQAAQAKAAAAAAAKAAQAAQAKAAAAAAALAAQAAQAKAAAAAAAMAAQAAQAKAAAAAAAIAAQAAQAKAAAAAAAHAAQAAQAKAAAAAAAHAAMAAQAKAAAAAAAHAAIAAQAKAAAAAAAHAAEAAQAKAAAAAAAFAP3/AQAJAAAAAAAFAP7/AQAJAAAAAAAGAP3/AQAJAAAAAAAHAP3/AQAJAAAAAAAJAP3/AQAJAAAAAAAJAP7/AQAJAAAAAAAHAP//AQAJAAAAAAAIAP//AQAJAAAAAAAJAP//AQAJAAAAAAAGAAEAAQAKAAAAAAAFAAEAAQAKAAAAAAAEAAEAAQAKAAAAAAADAAEAAQAKAAAAAAADAAAAAQAJAAAAAAADAP//AQAJAAAAAAAEAP//AQAJAAAAAAAFAP//AQAJAAAAAAACAAAAAQAJAAAAAAABAAAAAQAJAAAAAAABAP7/AQAJAAAAAAABAAEAAQAKAAAAAAABAAIAAQAKAAAAAAABAAMAAQAKAAAAAAADAAMAAQAKAAAAAAAEAAMAAQAKAAAAAAAFAAMAAQAKAAAAAAAFAAQAAQAKAAAAAAAFAAUAAQAKAAAAAAABAAUAAQAKAAAAAAACAAUAAQAKAAAAAAADAAUAAQAKAAAAAAABAAQAAQAKAAAAAAABAAcAAQAKAAAAAAACAAcAAQAKAAAAAAADAAcAAQAKAAAAAAAEAAcAAQAKAAAAAAAFAAcAAQAKAAAAAAAFAAYAAQAKAAAAAAAGAAYAAQAKAAAAAAAHAAYAAQAKAAAAAAAHAAcAAQAKAAAAAAAHAAgAAQAKAAAAAAAIAAgAAQAKAAAAAAAJAAgAAQAKAAAAAAAKAAgAAQAKAAAAAAALAAgAAQAKAAAAAAALAAcAAQAKAAAAAAALAAYAAQAKAAAAAAAJAAYAAQAKAAAAAAAJAAUAAQAKAAAAAAANAAQAAQAKAAAAAAANAAUAAQAKAAAAAAANAAYAAQAKAAAAAAANAAcAAQAKAAAAAAANAAgAAQAKAAAAAAANAAkAAQAKAAAAAAANAAoAAQAKAAAAAAALAAkAAQAKAAAAAAALAAoAAQAKAAAAAAALAAsAAQAKAAAAAAALAAwAAQAKAAAAAAALAA0AAQAKAAAAAAALAA4AAQAKAAAAAAANAAsAAQAKAAAAAAANAAwAAQAKAAAAAAANAA0AAQAKAAAAAAANAA4AAQAKAAAAAAANAA8AAQAKAAAAAAANABAAAQAKAAAAAAAJABAAAQAKAAAAAAAKABAAAQAKAAAAAAALABAAAQAKAAAAAAAMABAAAQAKAAAAAAAOABAAAQAKAAAAAAAPABAAAQAKAAAAAAAJABEAAQAKAAAAAAAKABIAAQAKAAAAAAAJABIAAQAKAAAAAAALABIAAQAKAAAAAAAPAA4AAQAKAAAAAAAQAA4AAQAKAAAAAAARAA4AAQAKAAAAAAARAA8AAQAKAAAAAAARABAAAQAKAAAAAAARABEAAQAKAAAAAAARABIAAQAKAAAAAAANABIAAQAKAAAAAAAOABIAAQAKAAAAAAAPABIAAQAKAAAAAAAQABIAAQAKAAAAAAASABIAAQAKAAAAAAATABIAAQAKAAAAAAARAAwAAQAKAAAAAAAQAAwAAQAKAAAAAAAPAAwAAQAKAAAAAAAPAAsAAQAKAAAAAAAPAAoAAQAKAAAAAAAPAAkAAQAKAAAAAAAPAAgAAQAKAAAAAAAPAAcAAQAKAAAAAAAPAAYAAQAKAAAAAAAPAAUAAQAKAAAAAAAPAAQAAQAKAAAAAAAPAAMAAQAKAAAAAAAQAAgAAQAKAAAAAAARAAgAAQAKAAAAAAARAAcAAQAKAAAAAAARAAYAAQAKAAAAAAARAAQAAQAKAAAAAAASAAQAAQAKAAAAAAATAAQAAQAKAAAAAAATAAUAAQAKAAAAAAATAAYAAQAKAAAAAAATAAcAAQAKAAAAAAATAAgAAQAKAAAAAAATAAkAAQAKAAAAAAATAAoAAQAKAAAAAAATAAsAAQAKAAAAAAATAAwAAQAKAAAAAAATAA0AAQAKAAAAAAATAA4AAQAKAAAAAAATAA8AAQAKAAAAAAATABAAAQAKAAAAAAAUABAAAQAKAAAAAAAVABAAAQAKAAAAAAAVABEAAQAKAAAAAAAVABIAAQAKAAAAAAAVABMAAQAKAAAAAAAWABIAAQAKAAAAAAAXABIAAQAKAAAAAAASAAoAAQAKAAAAAAARAAoAAQAKAAAAAAAXAAMAAQAKAAAAAAAXAAQAAQAKAAAAAAAVAAQAAQAKAAAAAAAVAAUAAQAKAAAAAAAVAAYAAQAKAAAAAAAWAAYAAQAKAAAAAAAXAAYAAQAKAAAAAAAYAAYAAQAKAAAAAAAVAAcAAQAKAAAAAAAVAAgAAQAKAAAAAAAVAAkAAQAKAAAAAAAVAAoAAQAKAAAAAAAVAAsAAQAKAAAAAAAVAAwAAQAKAAAAAAAVAA0AAQAKAAAAAAAVAA4AAQAKAAAAAAAWAA4AAQAKAAAAAAAXAA4AAQAKAAAAAAAXAA8AAQAKAAAAAAAXABAAAQAKAAAAAAAXAAwAAQAKAAAAAAAYAAwAAQAKAAAAAAAWAAoAAQAKAAAAAAAXAAoAAQAKAAAAAAAXAAkAAQAKAAAAAAAXAAgAAQAKAAAAAAANABMAAQAKAAAAAAAHABMAAQAKAAAAAAAHABIAAQAKAAAAAAAHABEAAQAKAAAAAAAHABAAAQAKAAAAAAAHAA8AAQAKAAAAAAAHAA4AAQAKAAAAAAAIAA4AAQAKAAAAAAAJAA4AAQAKAAAAAAAKAA4AAQAKAAAAAAAFABMAAQAKAAAAAAAFABIAAQAKAAAAAAAFABEAAQAKAAAAAAAFABAAAQAKAAAAAAD+/xIAAQAKAAAAAAD//xIAAQAKAAAAAAAAABIAAQAKAAAAAAABABIAAQAKAAAAAAACABIAAQAKAAAAAAADABIAAQAKAAAAAAADABEAAQAKAAAAAAADABAAAQAKAAAAAAADAA8AAQAKAAAAAAADAA4AAQAKAAAAAAAEAA4AAQAKAAAAAAAFAA4AAQAKAAAAAAAFAA0AAQAKAAAAAAAFAAwAAQAKAAAAAAAGAAwAAQAKAAAAAAAHAAwAAQAKAAAAAAAIAAwAAQAKAAAAAAAJAAwAAQAKAAAAAAAJAAsAAQAKAAAAAAAJAAoAAQAKAAAAAAAHAAoAAQAKAAAAAAAGAAoAAQAKAAAAAAAFAAoAAQAKAAAAAAAFAAkAAQAKAAAAAAAEAAkAAQAKAAAAAAADAAkAAQAKAAAAAAADAAwAAQAKAAAAAAADAAsAAQAKAAAAAAADAAoAAQAKAAAAAAACAAwAAQAKAAAAAAABAAwAAQAKAAAAAAABAAsAAQAKAAAAAAABAAoAAQAKAAAAAAABAAkAAQAKAAAAAAABAAgAAQAKAAAAAAABAA4AAQAKAAAAAAABAA0AAQAKAAAAAAABABAAAQAKAAAAAAAAABAAAQAKAAAAAAD//xAAAQAKAAAAAAD//xEAAQAKAAAAAAD//w8AAQAKAAAAAAD//w4AAQAKAAAAAAD//w0AAQAKAAAAAAD//wwAAQAKAAAAAAD//wsAAQAKAAAAAAD//woAAQAKAAAAAAD+/woAAQAKAAAAAAD9/woAAQAKAAAAAAD8/woAAQAKAAAAAAD7/woAAQAKAAAAAAD//wgAAQAKAAAAAAD//wcAAQAKAAAAAAD//wYAAQAKAAAAAAD//wUAAQAKAAAAAAD//wQAAQAKAAAAAAD+/wQAAQAKAAAAAAAAAAQAAQAKAAAAAAD//wMAAQAKAAAAAAD//wIAAQAKAAAAAAD//wEAAQAKAAAAAAD//wAAAQAJAAAAAAD/////AQAJAAAAAAD9//7/AQAJAAAAAAD9////AQAJAAAAAAD9/wAAAQAJAAAAAAD8/wMAAQAKAAAAAAD8/wQAAQAKAAAAAAD8/wUAAQAKAAAAAAD8/wYAAQAKAAAAAAD9/wYAAQAKAAAAAAD9/wcAAQAKAAAAAAD9/wgAAQAKAAAAAAD9/wkAAQAKAAAAAAD5////AQAJAAAAAAD6////AQAJAAAAAAD7////AQAJAAAAAAD8/wEAAQAKAAAAAAD8/wIAAQAKAAAAAAD6/wEAAQAKAAAAAAD6/wIAAQAKAAAAAAD5/wIAAQAKAAAAAAD4/wIAAQAKAAAAAAD3/wIAAQAKAAAAAAD2/wIAAQAKAAAAAAD2/wEAAQAKAAAAAAD2/wAAAQAJAAAAAAD2////AQAJAAAAAAD2//7/AQAJAAAAAAD2//3/AQAJAAAAAAD2//z/AQAJAAAAAAD2//v/AQAJAAAAAAD2//r/AQAJAAAAAAD2//n/AQAJAAAAAAD9/wEAAQAKAAAAAAD+/wMAAQAKAAAAAAD7/wQAAQAKAAAAAAD6/wQAAQAKAAAAAAD5/wQAAQAKAAAAAAD4/wQAAQAKAAAAAAD3/wQAAQAKAAAAAAD2/wQAAQAKAAAAAAD2/wMAAQAKAAAAAAD4/wUAAQAKAAAAAAD4/wYAAQAKAAAAAAD6/wYAAQAKAAAAAAD6/wcAAQAKAAAAAAD7/wgAAQAKAAAAAAD6/wgAAQAKAAAAAAD5/wgAAQAKAAAAAAD4/wgAAQAKAAAAAAD3/wgAAQAKAAAAAAD2/wgAAQAKAAAAAAD2/wcAAQAKAAAAAAD2/wYAAQAKAAAAAAD1/wYAAQAKAAAAAAD0/wYAAQAKAAAAAADz/wYAAQAKAAAAAADy/wYAAQAKAAAAAADx/wYAAQAKAAAAAADw/wYAAQAKAAAAAADw/wUAAQAKAAAAAADw/wQAAQAKAAAAAADw/wMAAQAKAAAAAADw/wIAAQAKAAAAAADq/wAAAQAJAAAAAADq/wEAAQAKAAAAAADq/wIAAQAKAAAAAADq/wMAAQAKAAAAAADq/wQAAQAKAAAAAADr/wIAAQAKAAAAAADs/wIAAQAKAAAAAADt/wIAAQAKAAAAAADu/wIAAQAKAAAAAADu/wEAAQAKAAAAAADu/wAAAQAJAAAAAADv/wAAAQAJAAAAAADw/wAAAQAJAAAAAADx/wAAAQAJAAAAAADy/wAAAQAJAAAAAADy/wEAAQAKAAAAAADy/wIAAQAKAAAAAADy/wMAAQAKAAAAAADy/wQAAQAKAAAAAADz/wIAAQAKAAAAAAD0/wIAAQAKAAAAAAD0/wMAAQAKAAAAAAD0/wQAAQAKAAAAAAD0/wUAAQAKAAAAAAD0/wAAAQAJAAAAAAD1/wAAAQAJAAAAAADy////AQAJAAAAAADy//7/AQAJAAAAAADy//3/AQAJAAAAAADy//z/AQAJAAAAAADy//v/AQAJAAAAAADw//v/AQAJAAAAAADw//z/AQAJAAAAAADx//v/AQAJAAAAAADz//7/AQAJAAAAAAD0//7/AQAJAAAAAAD0//3/AQAJAAAAAAD0//z/AQAJAAAAAAD0//r/AQAJAAAAAAD0//v/AQAJAAAAAADw//7/AQAJAAAAAADv//7/AQAJAAAAAADs/wAAAQAJAAAAAADs////AQAJAAAAAADt//7/AQAJAAAAAADs//7/AQAJAAAAAADs//z/AQAJAAAAAADs/wQAAQAKAAAAAADt/wQAAQAKAAAAAADu/wQAAQAKAAAAAADv/wQAAQAKAAAAAADs/wUAAQAKAAAAAADs/wYAAQAKAAAAAADr/wYAAQAKAAAAAADq/wYAAQAKAAAAAADp/wYAAQAKAAAAAADq/wcAAQAKAAAAAADq/wgAAQAKAAAAAADq/wkAAQAKAAAAAADq/woAAQAKAAAAAADq/wsAAQAKAAAAAADq/wwAAQAKAAAAAADq/w0AAQAKAAAAAADq/w4AAQAKAAAAAADq/w8AAQAKAAAAAADq/xAAAQAKAAAAAADq/xEAAQAKAAAAAADq/xIAAQAKAAAAAADr/xIAAQAKAAAAAADs/xIAAQAKAAAAAADt/xIAAQAKAAAAAADu/xIAAQAKAAAAAADv/xIAAQAKAAAAAADw/xEAAQAKAAAAAADw/xIAAQAKAAAAAADy/xIAAQAKAAAAAADy/xEAAQAKAAAAAADy/xAAAQAKAAAAAADx/xAAAQAKAAAAAADw/xAAAQAKAAAAAADw/w8AAQAKAAAAAADw/w4AAQAKAAAAAADv/w4AAQAKAAAAAADu/w4AAQAKAAAAAADt/w4AAQAKAAAAAADs/w4AAQAKAAAAAADs/w8AAQAKAAAAAADs/xAAAQAKAAAAAADt/xAAAQAKAAAAAADu/xAAAQAKAAAAAADs/wwAAQAKAAAAAADt/wwAAQAKAAAAAADu/wwAAQAKAAAAAADv/wwAAQAKAAAAAADw/wwAAQAKAAAAAADx/wwAAQAKAAAAAADy/wwAAQAKAAAAAADy/wsAAQAKAAAAAADy/woAAQAKAAAAAADx/woAAQAKAAAAAADw/woAAQAKAAAAAADv/woAAQAKAAAAAADu/woAAQAKAAAAAADt/woAAQAKAAAAAADs/woAAQAKAAAAAADr/woAAQAKAAAAAADs/wgAAQAKAAAAAADt/wgAAQAKAAAAAADu/wgAAQAKAAAAAADv/wgAAQAKAAAAAADw/wgAAQAKAAAAAADx/wgAAQAKAAAAAADy/wgAAQAKAAAAAADz/wgAAQAKAAAAAAD0/wgAAQAKAAAAAADu/wcAAQAKAAAAAADu/wYAAQAKAAAAAAD0/wkAAQAKAAAAAAD0/woAAQAKAAAAAAD0/wsAAQAKAAAAAAD0/wwAAQAKAAAAAAD0/w0AAQAKAAAAAAD0/w4AAQAKAAAAAAD1/w4AAQAKAAAAAAD2/w4AAQAKAAAAAAD3/w4AAQAKAAAAAADy/w4AAQAKAAAAAADz/w4AAQAKAAAAAAD4/w4AAQAKAAAAAAD2/w8AAQAKAAAAAAD2/xAAAQAKAAAAAAD1/xAAAQAKAAAAAAD0/xAAAQAKAAAAAAD0/xEAAQAKAAAAAAD0/xIAAQAKAAAAAAD0/xMAAQAKAAAAAAD2/xIAAQAKAAAAAAD3/xIAAQAKAAAAAAD4/xAAAQAKAAAAAAD4/xEAAQAKAAAAAAD4/xIAAQAKAAAAAAD4/xMAAQAKAAAAAAD6/xIAAQAKAAAAAAD7/xIAAQAKAAAAAAD8/xEAAQAKAAAAAAD8/xIAAQAKAAAAAAD8/xMAAQAKAAAAAAD8/xAAAQAKAAAAAAD9/xAAAQAKAAAAAAD6/xAAAQAKAAAAAAD6/w8AAQAKAAAAAAD6/w4AAQAKAAAAAAD6/w0AAQAKAAAAAAD6/wwAAQAKAAAAAAD7/wwAAQAKAAAAAAD8/wwAAQAKAAAAAAD9/wwAAQAKAAAAAAD7/w4AAQAKAAAAAAD8/w4AAQAKAAAAAAD9/w4AAQAKAAAAAAD5/wwAAQAKAAAAAAD4/wwAAQAKAAAAAAD3/wwAAQAKAAAAAAD2/wwAAQAKAAAAAAD2/wsAAQAKAAAAAAD2/woAAQAKAAAAAAD4/wsAAQAKAAAAAAD4/woAAQAKAAAAAAD4/wkAAQAKAAAAAAD6/woAAQAKAAAAAAAYAAEAAQAKAAAAAAAXAAEAAQAKAAAAAAAWAAEAAQAKAAAAAAAVAAEAAQAKAAAAAAAUAAEAAQAKAAAAAAASAAEAAQAKAAAAAAARAAEAAQAKAAAAAAAQAAEAAQAKAAAAAAAPAAEAAQAKAAAAAAAOAAEAAQAKAAAAAAAMAAEAAQAKAAAAAAALAAEAAQAKAAAAAAAKAAEAAQAKAAAAAAAIAAEAAQAKAAAAAAACAAEAAQAKAAAAAAAAAAEAAQAKAAAAAAD+/wEAAQAKAAAAAAD7/wEAAQAKAAAAAAD5/wEAAQAKAAAAAAD4/wEAAQAKAAAAAAD3/wEAAQAKAAAAAAD1/wEAAQAKAAAAAAD0/wEAAQAKAAAAAADz/wEAAQAKAAAAAADx/wEAAQAKAAAAAADw/wEAAQAKAAAAAADv/wEAAQAKAAAAAADt/wEAAQAKAAAAAADs/wEAAQAKAAAAAADr/wEAAQAKAAAAAADp/wEAAQAKAAAAAAAYAAAAAQAJAAAAAAAUAAAAAQAJAAAAAAASAAAAAQAJAAAAAAAOAAAAAQAJAAAAAAAKAAAAAQAJAAAAAAAIAAAAAQAJAAAAAAAHAAAAAQAJAAAAAAAGAAAAAQAJAAAAAAAFAAAAAQAJAAAAAAAEAAAAAQAJAAAAAAAAAAAAAQAJAAAAAAD+/wAAAQAJAAAAAAD8/wAAAQAJAAAAAAD7/wAAAQAJAAAAAAD6/wAAAQAJAAAAAAD5/wAAAQAJAAAAAAD3/wAAAQAJAAAAAADz/wAAAQAJAAAAAADt/wAAAQAJAAAAAADr/wAAAQAJAAAAAADp/wAAAQAJAAAAAAA=")
tile_set = SubResource("TileSet_5cu6u")

[node name="Player1" parent="." node_paths=PackedStringArray("other") instance=ExtResource("2_xpixk")]
z_index = 10
position = Vector2(-416, -160)
target_position = Vector2(-416, -160)
other = NodePath("../Player2")

[node name="Player2" parent="." node_paths=PackedStringArray("other") instance=ExtResource("3_7wvnb")]
z_index = 10
position = Vector2(384, 160)
target_position = Vector2(384, 160)
other = NodePath("../Player1")
is_player_a = false

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, 32)
zoom = Vector2(0.88, 0.805)
editor_draw_limits = true

[node name="Fade" parent="." instance=ExtResource("4_ns3we")]
z_index = 100
metadata/_edit_lock_ = true

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Coins" type="Node" parent="."]

[node name="Coin-White" parent="Coins" instance=ExtResource("7_f3dax")]
visible = false
position = Vector2(384, -160)
autoplay = ""
frame_progress = 0.0
speed_scale = 5.0

[node name="Coin-Black" parent="Coins" instance=ExtResource("8_savqc")]
visible = false
position = Vector2(-416, 128)
speed_scale = 5.0

[node name="Maze1" type="Sprite2D" parent="."]
visible = false
z_index = -2
position = Vector2(28, 26)
rotation = 1.5708
scale = Vector2(3.85532, 3.85532)
texture = ExtResource("6_qpq00")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
